# nullshift

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cli.py  nullshift  nullshift.bat  pyproject.toml  requirements.txt  setup.py  setup_wizard.py
.github/: FUNDING.yml
app/: admin.html  auth.py  config.py  deployment_memory.py  llm.py  login.html  main.py  prompts.py  rag.py  schemas.py  setup.html  ui.html
app/connectors/: __init__.py  base.py  elastic.py  limacharlie.py  sentinel.py  splunk.py  virustotal.py  wazuh.py
app/db/: chat_store.py  investigation_state.py  prefs_store.py  settings_store.py  summary_store.py  user_store.py  verdict_store.py
app/execution/: audit.py  executor.py  investigation_service.py  report.py  scoring.py  tool_runner.py
app/investigation/: keywords.py  mode.py  scenario_detector.py  timewindow.py
app/playbooks/: __init__.py  parser.py  runner.py
app/utils/: cache.py  debug_trace.py  timeparse.py
data/kb/: malware_detection.md  port-scan.md  ssh-brute-force.md  web-attack-dvwa.md
scripts/: diag.py  test_sdk.py
tests/: e2e_playwright.js  test_chat_store_ordering.py  test_prefs_store.py  test_summary_store.py  test_verdict_store.py
